--- a/classification/configs/resnet_config_test.yaml
+++ b/classification/configs/resnet_config_test.yaml
@@ -10,6 +10,8 @@ model:
  spatial_dims: 3
  n_input_channels: 1 
  load_model_path: null # path to pretrained model(and/or optimizer) state dict
+ dropout_rate_fc: 0.2
+ dropout_rate_relu: 0.5
 
 
 loss:
