--- a/classification/configs/resnet_config_train.yaml
+++ b/classification/configs/resnet_config_train.yaml
@@ -12,6 +12,7 @@ model:
  spatial_dims: 3
  n_input_channels: 1 
  load_model_path: null # path to pretrained model(and/or optimizer) state dict
+ dropout_rate_fc: 0.2
 
 
 optimizer:
