--- a/classification/configs/resnet_config_train.yaml
+++ b/classification/configs/resnet_config_train.yaml
@@ -13,7 +13,7 @@ model:
  n_input_channels: 1 
  load_model_path: null # path to pretrained model(and/or optimizer) state dict
  dropout_rate_fc: 0.2
-
+ dropout_rate_relu: 0.5
 
 optimizer:
  name: 'adam' # adam, adamw, rmsprop
