--- a/classification/configs/efficientnet_config_train.yaml
+++ b/classification/configs/efficientnet_config_train.yaml
@@ -1,43 +1,42 @@
 ---
 training:
- batch_size: 32
- num_epochs: 35
+ batch_size: 16
+ num_epochs: 25
  num_workers: 0
  validation_interval: 1 
 
 
 model:
- name: 'densenet121' # 'densenet121', 'densenet169', 'densenet201'
+ name: 'efficientnet-b0' # efficientnet-b0, efficientnet-b1, efficientnet-b2, efficientnet-b3, efficientnet-b4, efficientnet-b5, efficientnet-b6, efficientnet-b7, efficientnet-b8
  num_classes: 3
  spatial_dims: 3
  n_input_channels: 1 
  load_model_path: null # path to pretrained model(and/or optimizer) state dict
- dropout_prob: 0.35
 
 optimizer:
- name: 'adamw' # adam, adamw, rmsprop
- lr: 0.001 # # adam, adamw, rmsprop
- weight_decay: 0.001 # adam, adamw, rmsprop
+ name: 'adamw' # adam, adamw
+ lr: 0.0001 # # adam, adamw
+ weight_decay: 0.0001 # adam, adamw, 
  betas: [0.9, 0.999] # adam, adamw
 
 
 scheduler:
  name: 'ReduceLROnPlateau'
  factor: 0.5
- patience: 5
- min_lr: 0.0001
+ patience: 2
+ min_lr: 0.000001
 
 
 loss:
  name: 'cross_entropy_loss' 
- weight: [0.7729, 1.7963, 0.8700]
+ weight: [0.7729, 1.7963, 0.8700] 
  reduction: 'mean'
  label_smoothing: 0.1
  
 #  name: 'focal_loss'
 #  gamma: 1.5
-#  alpha: 0.25
+#  alpha: 0.5
 #  reduction: 'mean'
-#  weight: [1.7419, 0.7013] 
- 
-# ...
+#  weight: [0.8304, 1.9611, 0.7777]
+
+...
